--- a/style.css
+++ b/style.css
@@ -248,16 +248,143 @@ body {
   width: 100%;
   height: 100%;
 }
-.container section#photo.photo .single-photo {
+.container section#photo.photo .terms {
   display: flex;
-  flex-direction: column-reverse;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
 }
-.container section#photo.photo .single-photo img {
-  -o-object-fit: cover;
-     object-fit: cover;
+.container section#photo.photo .terms .terms-data {
+  width: 564px;
+  max-width: 100%;
+  border-bottom: 1px solid black;
+}
+.container section#photo.photo .terms .terms-data .terms-data-bas {
+  max-width: 420px;
+}
+.container section#photo.photo .terms .terms-data .terms-data-bas h1,
+.container section#photo.photo .terms .terms-data .terms-data-bas p {
+  text-transform: uppercase;
+  font-weight: 400;
+}
+.container section#photo.photo .terms .terms-data .terms-data-bas h1 {
+  font-style: italic;
+  font-size: 66px;
+  line-height: 58px;
+  padding-bottom: 0.5em;
+}
+.container section#photo.photo .terms .terms-data .terms-data-bas p {
+  font-size: 14px;
+  line-height: 20.73px;
+  padding-bottom: 1em;
+}
+.container section#photo.photo .terms .terms-photo {
+  width: 563px;
+  max-width: 100%;
+  height: 844px;
+  background-color: aquamarine;
+}
+.container section#photo.photo .terms .terms-photo img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.container section#photo.photo .pagination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+  flex-wrap: wrap;
+}
+.container section#photo.photo .pagination .left-pagination {
+  padding: 2em 0;
+  width: 563px;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.container section#photo.photo .pagination .left-pagination p {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: capitalize;
+}
+.container section#photo.photo .pagination .left-pagination button {
+  width: 272px;
+  max-width: 100%;
+  background-color: #D8D8D8;
+  outline: none;
+  border: none;
+  height: 50px;
+  max-height: 100%;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 17.77px;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+.container section#photo.photo .pagination .right-pagination {
+  width: 563px;
+  max-width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.container section#photo.photo .pagination .right-pagination .photo-right-pagination {
+  width: 81px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.container section#photo.photo .pagination .right-pagination .photo-right-pagination .image-photo-right-pagination {
+  width: 100%;
+  height: 71px;
+  background-color: brown;
+}
+.container section#photo.photo .pagination .right-pagination .photo-right-pagination figcaption {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-top: 0.5em;
+}
+.container section#photo.photo .pagination .right-pagination .photo-right-pagination figcaption img {
+  width: 25px;
+  height: auto;
+}
+.container section#photo.photo .vous-aimerez-aussi {
+  display: flex;
+  flex-direction: column;
+  padding: 4em 0;
+}
+.container section#photo.photo .vous-aimerez-aussi p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26.66px;
+  text-transform: uppercase;
+  padding-bottom: 2em;
+}
+.container section#photo.photo .vous-aimerez-aussi .photo-vous-aimerez-aussi {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.container section#photo.photo .vous-aimerez-aussi .photo-vous-aimerez-aussi figure {
+  width: 564px;
+  max-width: 100%;
+  height: 495px;
+  max-height: 100%;
+  background-color: #D8D8D8;
+}
+.container section#photo.photo .vous-aimerez-aussi .photo-vous-aimerez-aussi figure .link-photo-vous-aimerez-aussi img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .container footer {
   width: 100%;
