--- a/style.scss
+++ b/style.scss
@@ -217,6 +217,7 @@ body {
     }
 
     section#photo.photo {
+
         width: calc((1148 / 1440) * 100%);
         margin: auto;
         padding-bottom: 2em;
@@ -287,19 +288,186 @@ body {
             }
         }
 
-        /*SINGLE PHOTO*/
-        .single-photo {
-            display: flex;
-            flex-direction: column-reverse;
-            justify-content: center;
 
-            img {
-                object-fit: cover;
-                width: 100%;
-                height: 100%;
+        /*SINGLE PHOTO*/
+
+
+        .terms {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: flex-end;
+
+
+            .terms-data {
+                width: 564px;
+                max-width: 100%;
+                border-bottom: 1px solid black;
+
+                .terms-data-bas {
+                    max-width: 420px;
+
+                    h1,
+                    p {
+                        text-transform: uppercase;
+                        font-weight: 400;
+
+                    }
+
+                    h1 {
+                        font-style: italic;
+                        font-size: 66px;
+                        line-height: 58px;
+                        padding-bottom: 0.5em;
+                    }
+
+                    p {
+                        font-size: 14px;
+                        line-height: 20.73px;
+                        padding-bottom: 1em;
+                    }
+                }
+            }
+
+            .terms-photo {
+                width: 563px;
+                max-width: 100%;
+                height: 844px;
+                background-color: aquamarine;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+
+        //pagination
+        .pagination {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid black;
+            flex-wrap: wrap;
+
+
+
+            .left-pagination {
+                padding: 2em 0;
+                width: 563px;
+                max-width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-wrap: wrap;
+
+
+                p {
+                    font-weight: 300;
+                    font-size: 14px;
+                    line-height: 21px;
+                    text-transform: capitalize;
+                }
+
+                button {
+                    width: 272px;
+                    max-width: 100%;
+                    background-color: #D8D8D8;
+                    outline: none;
+                    border: none;
+                    height: 50px;
+                    max-height: 100%;
+
+                    font-size: 12px;
+                    font-weight: 400;
+                    line-height: 17.77px;
+                    text-transform: capitalize;
+
+                    cursor: pointer;
+                }
+            }
+
+            .right-pagination {
+                width: 563px;
+                max-width: 100%;
+                display: flex;
+                justify-content: flex-end;
+
+                .photo-right-pagination {
+                    width: 81px;
+                    max-width: 100%;
+
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+
+                    .image-photo-right-pagination {
+                        width: 100%;
+                        height: 71px;
+                        background-color: brown;
+                    }
+
+                    figcaption {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        width: 100%;
+                        margin-top: 0.5em;
+
+                        img {
+                            width: 25px;
+                            height: auto;
+                        }
+                    }
+                }
+            }
+        }
+
+        //vous aimerez aussi
+
+        .vous-aimerez-aussi {
+            display: flex;
+            flex-direction: column;
+            padding: 4em 0;
+
+            p {
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 26.66px;
+
+                text-transform: uppercase;
+                padding-bottom: 2em;
+            }
+
+            .photo-vous-aimerez-aussi {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: wrap;
+
+
+                figure {
+                    width: 564px;
+                    max-width: 100%;
+                    height: 495px;
+                    max-height: 100%;
+                    background-color: #D8D8D8;
+
+                    .link-photo-vous-aimerez-aussi {
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                        }
+                    }
+
+                }
             }
         }
     }
+
 
     footer {
         width: 100%;
